# dogfood

./: .gitignore  CMakeLists.txt  LICENSE  build-toolchain.sh  build.sh  create-docker-images.sh  settings.sh
boot/: build.sh  run.sh
ci/build-image/: Dockerfile
ci/toolchain/: Dockerfile
doc/: conf.py  development.rst  global.rst  index.rst  intro.rst
kernel/: .process.cpp.swp  .process.h.swp  CMakeLists.txt  amd64.h  bio.cpp  bio.h  console.cpp  console.h  debug.h  device.cpp  device.h  dummy.cpp  elf.h  entry.S  errno.h  error.h  exception.S  exec.cpp  exec.h  ext2.cpp  ext2.h  file.cpp  file.h  fs.cpp  fs.h  ide.cpp  initcode.S  intrusive_list.h  io.h  ldscript  lib.cpp  lib.h  memory.cpp  page_allocator.cpp  page_allocator.h  partition.cpp  partition.h  pic.cpp  pic.h  pipe.cpp  (+18 more)
kernel-headers/: CMakeLists.txt
kernel-headers/include/dogfood/: device.h  errno.h  fcntl.h  ioctl.h  loader.h  netinet.h  procinfo.h  ptrace.h  select.h  signal.h  socket.h  stat.h  syscall.h  termios.h  time.h  tty.h  types.h  user.h  utsname.h  wait.h
kernel-test/: CMakeLists.txt  generate-ext2-image.py  stub.cpp  stub.h  test-bio.cpp  test-ext2.cpp  test-page.cpp
kernel/hw/: CMakeLists.txt  console.cpp  console.h  ide.cpp  ide.h  pic.cpp
kernel/x86_64/: CMakeLists.txt  amd64.h  entry.S  exception.S  initcode.S  ldscript  multiboot.h  paging.h  startup.cpp
lib/newlib-3.1.0/: CMakeLists.txt
lib/newlib-3.1.0/include/: fnmatch.h
lib/newlib-3.1.0/newlib/libc/: CMakeLists.txt
lib/newlib-3.1.0/newlib/libc/include/: _newlib_version.h  dirent.h  fnmatch.h  netdb.h  newlib.h  reent.h  stdlib.h  string.h
lib/newlib-3.1.0/newlib/libc/include/arpa/: inet.h
lib/newlib-3.1.0/newlib/libc/include/netinet/: in.h  tcp.h
lib/newlib-3.1.0/newlib/libc/include/sys/: _default_fcntl.h  _types.h  errno.h  features.h  resource.h  select.h  signal.h  stat.h  sysmacros.h  types.h  utsname.h  wait.h
lib/newlib-3.1.0/newlib/libc/posix/: execl.c  execle.c  execv.c  isatty.c
lib/newlib-3.1.0/newlib/libc/stdio/: svfiwscanf.c  svfwprintf.c  vfiwscanf.c
lib/newlib-3.1.0/newlib/libc/stdlib/: callocr.c  dlmalloc.c  freer.c  getprogname.c  ldtoa.c  malignr.c  mallinfor.c  mallocr-base.c  mallocr.c  malloptr.c  mallstatsr.c  msizer.c  pvallocr.c  reallocr.c  vallocr.c
lib/newlib-3.1.0/newlib/libc/sys/dogfood/: Makefile.am  Makefile.in  access.c  closedir.c  configure  crt0.c  errno.h  isatty.c  lseek.c  opendir.c  readdir.c  rewinddir.c  syscall.S  syscall.h  syscall_wrappers.c  termios.c  unimplemented.c
lib/newlib-3.1.0/newlib/libc/sys/dogfood/sys/: dirent.h  errno.h  ioctl.h  mman.h  mount.h  ptrace.h  select.h  signal.h  socket.h  termios.h  un.h
loader/: CMakeLists.txt
loader/src/: bio.cpp  bio.h  elf.h  ext2.cpp  ext2.h  fs.cpp  fs.h  heap.cpp  heap.h  kernel.cpp  kernel.h  lib.cpp  lib.h  loader.cpp  memory.cpp  memory.h  multiboot.h
multiboot/: CMakeLists.txt  ldscript  multiboot.S
test-ext2-img/: build.py
userland/binutils-2.32/: config.sub
userland/binutils-2.32/bfd/: config.bfd
userland/binutils-2.32/gas/: configure.tgt
userland/binutils-2.32/ld/: configure.tgt
userland/binutils-2.39/: config.sub
userland/binutils-2.39/bfd/: config.bfd
userland/binutils-2.39/gas/: configure.tgt
userland/binutils-2.39/ld/: configure.tgt
userland/coreutils-8.31/: .timestamp  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
userland/coreutils-8.31/build-aux/: config.sub
userland/coreutils-8.31/doc/: coreutils.info  stamp-vti
userland/coreutils-8.31/gnulib-tests/: Makefile.in  gnulib.mk  localename.c
userland/coreutils-8.31/lib/: af_alg.c  config.hin  getprogname.c  gnulib.mk  iconv.c  iconv.in.h  iconv_close.c  iconv_open.c  link.c  memcmp2.c  memcmp2.h  nproc.c  nproc.h  pthread.in.h  str-kmp.h  striconv.c  striconv.h  strtod.c  sys_resource.in.h  sys_socket.in.h  sys_utsname.in.h  tempname.c  tempname.h  vfprintf.c  vprintf.c
userland/coreutils-8.31/m4/: gnulib-comp.m4
userland/coreutils-8.31/man/: arch.1  b2sum.1  base32.1  base64.1  basename.1  basenc.1  cat.1  chcon.1  chgrp.1  chmod.1  chown.1  chroot.1  cksum.1  comm.1  coreutils.1  cp.1  csplit.1  cut.1  date.1  dd.1  df.1  dir.1  dircolors.1  dirname.1  du.1  echo.1  env.1  expand.1  expr.1  factor.1  false.1  fmt.1  fold.1  groups.1  head.1  hostid.1  hostname.1  id.1  install.1  join.1  (+68 more)
userland/coreutils-8.31/po/: af.po  be.po  bg.po  ca.po  coreutils.pot  cs.po  da.po  de.po  el.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  ga.po  gl.po  hr.po  hu.po  ia.po  id.po  it.po  ja.po  kk.po  ko.po  lg.po  lt.po  ms.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  tr.po  (+4 more)
userland/coreutils-8.31/src/: dircolors.h  fs-is-local.h  fs.h  single-binary.mk
userland/dash-0.5.10.2/: configure
userland/dash-0.5.10.2/src/: Makefile.in  mkinit.c
userland/gcc-12.2.0/: .gitignore  config.sub  mpfr
userland/gcc-12.2.0/fixincludes/: mkfixinc.sh
userland/gcc-12.2.0/gcc/: config.gcc
userland/gcc-12.2.0/libgcc/: config.host
userland/gcc-12.2.0/libstdc++-v3/: configure  crossconfig.m4
userland/gcc-9.2.0/: configure  gmp  mpc  mpfr
userland/gcc-9.2.0/fixincludes/: mkfixinc.sh
userland/gcc-9.2.0/gcc/: config.gcc
userland/gcc-9.2.0/gmp-6.1.2/: configfsf.sub
userland/gcc-9.2.0/libgcc/: config.host
userland/gcc-9.2.0/libstdc++-v3/: Makefile.in  aclocal.m4  configure  configure.ac  crossconfig.m4
userland/gcc-9.2.0/mpc-1.1.0/: config.sub
userland/gcc-9.2.0/mpfr-4.0.2/: Makefile.in  aclocal.m4  configure
userland/gdb-12.1/: configure.ac  sha256.sum
userland/gdb-12.1/bfd/: config.bfd
userland/gdb-12.1/gdb/: cp-support.c  event-top.c
userland/gdb-12.1/gdbsupport/: safe-strerror.cc
userland/gdb-12.1/include/: libiberty.h
userland/gdb-12.1/libbacktrace/: gstdint.h
userland/gmp-6.2.1/: configfsf.sub
userland/init/: CMakeLists.txt  init.c
userland/make-4.4/: Makefile.in
userland/mpc-1.2.1/build-aux/: config.sub
userland/mpfr-4.1.0/: config.sub
userland/ps/: CMakeLists.txt  ps.c
userland/strace/: CMakeLists.txt  strace.cpp  syscall.h
(+31 files in other folders)
